// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTabLinkWithTooltip handles children 1`] = `
<DocumentFragment>
  <mock-styledtooltiphostbase
    calloutprops="[object Object]"
    content="tooltip text"
    styles="[object Object]"
  >
    <a
      class="fui-Link insights-link insightsLink ___1fq7916_1xye54t f2hkw1w f3rmtva f1ewtqcl fyind8e f1k6fduh f1w7gpdv fk6fouc fjoy568 figsok6 f1s184ao f1mk8lai fnbmjn9 f1o700av f1iuv45f f1cmlufx f9n3di6 f1ids18y f1tx3yz7 f1deo86v f1eh06m1 f1iescvh fhgqx19 f1olyrje f1p93eir f1nev41a"
      href="test"
      tabindex="0"
      target="_blank"
    >
      link text
    </a>
  </mock-styledtooltiphostbase>
</DocumentFragment>
`;

exports[`NewTabLinkWithTooltip handles children: StyledTooltipHostBase props 1`] = `
{
  "calloutProps": {
    "styles": {
      "beak": "insightsTooltip",
      "root": "insightsTooltip",
    },
  },
  "children": <NewTabLink
    className="insightsLink"
    href="test"
  >
    link text
  </NewTabLink>,
  "content": "tooltip text",
  "styles": {
    "root": "insightsTooltipHost",
  },
}
`;

exports[`NewTabLinkWithTooltip renders with null tooltip content 1`] = `
<DocumentFragment>
  <mock-styledtooltiphostbase
    calloutprops="[object Object]"
    styles="[object Object]"
  >
    <a
      class="fui-Link insights-link insightsLink ___1fq7916_1xye54t f2hkw1w f3rmtva f1ewtqcl fyind8e f1k6fduh f1w7gpdv fk6fouc fjoy568 figsok6 f1s184ao f1mk8lai fnbmjn9 f1o700av f1iuv45f f1cmlufx f9n3di6 f1ids18y f1tx3yz7 f1deo86v f1eh06m1 f1iescvh fhgqx19 f1olyrje f1p93eir f1nev41a"
      href="test"
      tabindex="0"
      target="_blank"
    />
  </mock-styledtooltiphostbase>
</DocumentFragment>
`;

exports[`NewTabLinkWithTooltip renders with null tooltip content: StyledTooltipHostBase props 1`] = `
{
  "calloutProps": {
    "styles": {
      "beak": "insightsTooltip",
      "root": "insightsTooltip",
    },
  },
  "children": <NewTabLink
    className="insightsLink"
    href="test"
  />,
  "content": undefined,
  "styles": {
    "root": "insightsTooltipHost",
  },
}
`;

exports[`NewTabLinkWithTooltip renders with tooltip content 1`] = `
<DocumentFragment>
  <mock-styledtooltiphostbase
    calloutprops="[object Object]"
    content="tooltip text"
    styles="[object Object]"
  >
    <a
      class="fui-Link insights-link insightsLink ___1fq7916_1xye54t f2hkw1w f3rmtva f1ewtqcl fyind8e f1k6fduh f1w7gpdv fk6fouc fjoy568 figsok6 f1s184ao f1mk8lai fnbmjn9 f1o700av f1iuv45f f1cmlufx f9n3di6 f1ids18y f1tx3yz7 f1deo86v f1eh06m1 f1iescvh fhgqx19 f1olyrje f1p93eir f1nev41a"
      href="test"
      tabindex="0"
      target="_blank"
    />
  </mock-styledtooltiphostbase>
</DocumentFragment>
`;

exports[`NewTabLinkWithTooltip renders with tooltip content: StyledTooltipHostBase props 1`] = `
{
  "calloutProps": {
    "styles": {
      "beak": "insightsTooltip",
      "root": "insightsTooltip",
    },
  },
  "children": <NewTabLink
    className="insightsLink"
    href="test"
  />,
  "content": "tooltip text",
  "styles": {
    "root": "insightsTooltipHost",
  },
}
`;
